# capstone-llm

./: .gitignore  Dockerfile  README.md  pyproject.toml
.conveyor/: project.yaml
dags/: clean_docker_dag.py  conveyor_example.py
data/: breaking_the _rag.py  breaking_the_rag_parallel.py  test2.py
data/dbt/: answers.json  clean_test_local.py  questions.json  scalable_test.py
data/dbt/output/dbt_dataset/: pair_159e76ff-fcd0-4afb-aa85-17326cf04013.json  pair_1e37c76a-948e-43cd-ade1-6eca83f6b570.json  pair_2191953e-1d96-49d8-84c4-154b65e466aa.json  pair_2682a835-4e67-43cc-b184-569d3c3246e9.json  pair_33c14bbd-48bd-4fe6-a0c8-eaed031fca15.json  pair_37e7c822-9fb9-4936-8007-01f15df22b98.json  pair_39d10c2e-0553-4464-9e6b-7d7e01b684f2.json  pair_3d25cd11-5fdf-489f-9e83-5979704c05d7.json  pair_3da77d29-5146-4468-ab16-c9532c397e1a.json  pair_402c0a55-8ddc-4278-ab32-43340d886ae9.json  pair_407851cf-d67c-49c0-95bf-2e8c9095b1df.json  pair_4ae7d498-aea2-4c19-a579-fce406921913.json  pair_4ced5d5e-1cf6-4f4b-a5d4-ee0b874b1f9c.json  pair_507ee9d7-00ac-4dd9-a69b-6519c1d9c50a.json  pair_54a0bd9c-7783-4e7d-bb08-bd0097896a02.json  pair_68461fbd-46a5-439c-9725-bc05cc9d6d27.json  pair_6e402ffc-9586-49e6-af3c-6e9366c3ba86.json  pair_783b32a1-7d9b-4dce-921e-9d5cd9d03c12.json  pair_7aeb9f7f-4cf2-4ac0-8f41-88a498bb2910.json  pair_823f827b-c03d-4332-b8a0-d0547aada605.json  pair_91f2632f-fc9d-46d3-8226-89d3ad2e51da.json  (+9 more)
local_airflow/: clean_docker_dag.py  docker_example.py
src/capstonellm/common/: config.py  spark.py
src/capstonellm/tasks/: clean.py
